# MCP-Docusaurus

./: .gitignore  README.md  docker-compose.yml  dockercompose.yml  dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  server-info.json
app/: __init__.py  main.py  utils.py
app/database/: __init__.py  database.py
app/docs/: package-lock.json  package.json
app/models/: vector_doc.py
app/routes/: document.py  search.py  site_map.py  style.py
mcp_docusaurus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
